--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -1,17 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}Home {% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
 
     <h1>Welcome</h1>
-    <p>Hello from a Twig template {{ name }} </p>
-
+    <p>Hello from a Twig template, {{ name }}!</p>
 
     <ul>
-    	{%for color in colors%}
-    	<li>{{color}}</li>
-    	{% endfor %}
+        {% for colour in colours %}
+            <li>{{ colour }}</li>
+        {% endfor %}
     </ul>
 
 {% endblock %}
