--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block title %}Home{% endblock %}
 
 {% block body %}
 
     <h1>Welcome</h1>
-    <p>Hello from a Twig template, {{ name }}!</p>
 
-    <ul>
-        {% for colour in colours %}
-            <li>{{ colour }}</li>
-        {% endfor %}
-    </ul>
+    {% if current_user %}
+    	Hello {{ current_user.name }}.
+    	<a href="/logout">Log out</a>
+    {% else  %}
+    	<a href="/signup/new">Sign up</a> or <a href="/login">log in</a>
+	{% endif %}
 
 {% endblock %}
