--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -5,23 +5,8 @@
 {% block footer %}
 
     <script src="/js/hideShowPassword.min.js"></script>
+    <script src="/js/app.js"></script>
     <script>
-
-        $.validator.addMethod("validPassword", 
-            function (value, element, param) {
-                // body...
-                if (value != ''){
-                    if (value.match(/.*[a-z]+.*/i) == null){
-                        return false;
-                    }
-
-                    if (value.match(/.*\d+.*/) == null){
-                        return false;
-                    }
-
-                    return true;
-                }
-            }, 'Must contain atleast one letter and one number');
 
         $(document).ready(function () {
             // body...
